feat: refactor GUIGame and add green dots for valid moves